# tex_atlas

./: CMakeLists.txt  README.md  build.sh  run.bat  run.sh  start.sh  test_run.bat  test_run.sh  toolchain.cmake
linux_executable/: tex_atlas
src/: main.cpp
